service.yaml
apiVersion: v1
kind: Service
metadata:
  name: weather-app
  labels:
    app: weather-app
spec:
  selector:
    app: weather-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 5000
  type: NodePort
